--- a/text-transformer-backend/package.json
+++ b/text-transformer-backend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev" : "nodemon src/server.js"
+    "dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +15,9 @@
     "@google/generative-ai": "^0.16.0",
     "@langchain/openai": "^0.2.5",
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "mongodb": "^6.8.0",
+    "mongoose": "^8.5.3",
     "nodemon": "^3.1.4"
   }
 }
